--- a/Spring-Boot-Demo/src/main/resources/application.properties
+++ b/Spring-Boot-Demo/src/main/resources/application.properties
@@ -7,11 +7,59 @@ logging.level.org.mybatis.caches = debug
 logging.level.cn.mrdear.mapper = trace
 #logger end
 
+# DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties) 
+# name of the data source 
+#spring.datasource.name=
+## populate using data.sql  
+#spring.datasource.initialize=true   
+## a schema (DDL) script resource reference
+#spring.datasource.schema= 
+## a data (DML) script resource reference 
+#spring.datasource.data=   
+## the platform to use in the schema resource (schema-${platform}.sql)
+#spring.datasource.platform=   
+## continue even if can't be initialized
+#spring.datasource.continueOnError=false 
+## statement separator in SQL initialization scripts   
+#spring.datasource.separator=;  
+# JDBC Settings... 
+spring.datasource.url=jdbc:mysql://localhost:3306/springboot
+spring.datasource.username=root
+spring.datasource.password=123456
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.max-idle=10
+spring.datasource.max-wait=10000
+spring.datasource.min-idle=5
+spring.datasource.initial=5
+
+#spring.datasource.validation-query=  
+#spring.datasource.test-on-borrow=false  
+#spring.datasource.test-on-return=false  
+#spring.datasource.test-while-idle=  
+#spring.datasource.time-between-eviction-runs-millis=  
+#spring.datasource.min-evictable-idle-time-millis=  
+#spring.datasource.max-wait-millis=
+# DATASOURCE END
+
 #thymeleaf start
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.contents-type=text/html
-spring.thymeleaf.cache=false
+spring.thymeleaf.content-type=text/html
+#set to false for hot refresh
+spring.thymeleaf.cache=false 
 #thymeleaf end
+
+# REDIS (RedisProperties)  
+spring.redis.host=localhost  
+spring.redis.password=  
+spring.redis.port=6379 
+spring.redis.pool.max-idle=8  
+spring.redis.pool.min-idle=0  
+spring.redis.pool.max-active=8  
+spring.redis.pool.max-wait=-1  
+#REDIS END
+
 #更改tomcat默认启动端口
-#server.port=8011
+server.port=8081
