--- a/Spring-Boot-Demo/src/main/resources/application.properties
+++ b/Spring-Boot-Demo/src/main/resources/application.properties
@@ -74,3 +74,8 @@ spring.redis.timeout=0
 
 #更改tomcat默认启动端口
 server.port=8081
+
+#Favicon(spring-boot标题标识：小叶子，源为类路径下的favicon.ico)
+spring.mvc.favicon.enabled=true
+
+#WebSocket
