--- a/Spring-Boot-Demo/pom.xml
+++ b/Spring-Boot-Demo/pom.xml
@@ -21,7 +21,6 @@
     <version>1.4.1.RELEASE</version>
   </parent>
 
-
   <dependencies>
     <!-- 添加对redis的支持 -->
     <dependency>  
@@ -56,9 +55,26 @@
       <version>1.0.3</version>
     </dependency>  
     <!--mybatis end-->
-
+    <!--容器-->
+    <!--默认-->
+<!--    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-tomcat</artifactId>
+    </dependency>-->
+<!--    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-jetty</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-undertow</artifactId>
+    </dependency>-->
     <!--spring boot end-->
-
+    <!--WebSocket-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-websocket</artifactId>
+    </dependency>
     <!--ehcache start-->
     <dependency>
       <groupId>net.sf.ehcache</groupId>
