--- a/Spring-Boot-Demo/src/main/resources/application.properties
+++ b/Spring-Boot-Demo/src/main/resources/application.properties
@@ -79,3 +79,21 @@ server.port=8081
 spring.mvc.favicon.enabled=true
 
 #WebSocket
+
+#jpa
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jackson.serialization.indent_output=true
+spring.data.rest.base-path= /api
+
+#cache
+spring.cache.type=#可选generic,ehcache,hazelcast,infinispan,jcache,redis,guava,simple,none
+spring.cache.cache-names=#程序启动时创建缓存名称
+spring.cache.ehcache.config=#ehcache配置文件地址
+spring.cache.hazelcast.config=#hazelcast配置文件地址
+spring.cache.infinispan.config=#infinispan配置文件地址
+spring.cache.jcache.config=#jcache配置文件地址
+spring.cache.jcache.provider=#当多个jcache实现在类路径中的时候,指定jcache实现
+spring.cache.guava.spec=#guava spec
+
+debug=true
